@@ -58,6 +58,8 @@ Each plugin takes a seed. Here's what those seeds are:
 [Obligatory] ip-or-hostname:port
 .IP DBus
 [Obligatory] Filename of a configuration file for the plugin
+.br
+[Optional] ",subseed" optional seed to pass to dlopen'd generator.
 .IP gui_fltk
 [Irrelevant] Ignores the passed seed
 
